# Eui

./: .dmypy.json  .env  .gitignore  README.md  pyproject.toml
chatterbox/: cli_tty.py  pyproject.toml
md/: generate_video_prompt.md
md_and_json/: script.json
prompts/: common_error.md  generate_video_prompt.md
py/: generate_manim_script.py  render.py
src/: common_error.md  generate_video_prompt.md
src/agents/: manim_agent.py  script_agent.py
src/code/: audio_tool.py  generate_audio.py  generate_manim_script.py  make-a-video.py  manim_agent.py  render.py  script_agent.py  video_tool.py
src/tools/: audio_tool.py  audo_generator_tool.py  class_defination_tool.py  render_manim_tool.py  video_tool.py
src/utils/: custom_logging.py  generate_singature.py
