[project]
name = "eui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ffmpeg-python>=0.2.0",
    "google-generativeai>=0.8.5",
    "langchain>=0.3.25",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.4.8",
    "manim>=0.19.0",
    "moviepy>=2.2.1",
    "mypy>=1.16.0",
    "pyright>=1.1.402",
    "pytype>=2024.10.11",
    "requests>=2.32.4",
    "ty>=0.0.1a9",
    "typing-extensions>=4.14.0",
]
